[gd_scene load_steps=6 format=3 uid="uid://de4as8hlv6sdg"]

[ext_resource type="Script" path="res://Scripts/end_screen.gd" id="1_nqahu"]
[ext_resource type="Texture2D" uid="uid://cq6gjuegudrl8" path="res://Images/misc/GUI.png" id="2_nr6vi"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uhwma"]
region_rect = Rect2(0, 0, 192, 304)

[sub_resource type="Theme" id="Theme_h8j3h"]
Label/styles/normal = SubResource("StyleBoxTexture_uhwma")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gthny"]
texture = ExtResource("2_nr6vi")
texture_margin_left = 6.0
texture_margin_top = 27.0
texture_margin_right = 6.0
texture_margin_bottom = 26.0
region_rect = Rect2(0, 96, 48, 32)

[node name="EndScreen" type="Control"]
process_mode = 3
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_h8j3h")
script = ExtResource("1_nqahu")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -125.0
offset_right = 150.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_gthny")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="RestartButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Quit"

[node name="TitleLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.5
offset_top = 10.0
offset_right = 20.5
offset_bottom = 39.0
grow_horizontal = 2
text = "Text"

[connection signal="pressed" from="Panel/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
